--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = "postgresql://ucigaztkg1uo2lny08mj:oXXzNkJAUF9XTMJ5pRQLZBz6Cxvszf@bwucumjthbbrutwfg7m2-postgresql.services.clever-cloud.com:5432/bwucumjthbbrutwfg7m2"
+DATABASE_URL = "db connection url"
 PORT = 5000
