--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL = "db connection url"
+DATABASE_URL = "postgresql://postgres:ISqxllEnGLnCYOgGByOOrVuveTaRtWkb@postgres.railway.internal:5432/railway"
 PORT = 5000
+    
