--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DATABASE_URL = "postgresql://postgres:ISqxllEnGLnCYOgGByOOrVuveTaRtWkb@postgres.railway.internal:5432/railway"
+DATABASE_URL = "postgresql://postgres:KVGxMrUyhnOeKfHpEBbWbNcTLpySwyoj@shinkansen.proxy.rlwy.net:49474/railway"
 PORT = 5000
-    
