auth oauth google

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 PORT = "5000"
 DATABASE_URL = "postgresql://postgres:KVGxMrUyhnOeKfHpEBbWbNcTLpySwyoj@shinkansen.proxy.rlwy.net:49474/railway"
 API_SECRET = "j£rEzGMLUSgq?.&`6tV2(w£p?J&rXH9F;8?@0ba9a3)R>C*"
-GOOGLE_ID = "723829624477-ks9bud63tm5vms2qs68maj5eogeoir2c.apps.googleusercontent.com"
-GOOGLE_SECRET = "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"
+GOOGLE_ID = ""
+GOOGLE_SECRET = ""
