--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 #Temporary DB Using Railway Change with your db connection url
 PORT = "5000"
 DATABASE_URL = "postgresql://postgres:KVGxMrUyhnOeKfHpEBbWbNcTLpySwyoj@shinkansen.proxy.rlwy.net:49474/railway"
-API_SECRET = "j£rEzGMLUSgq?.&`6tV2(w£p?J&rXH9F;8?@0ba9a3)R>C*"
-GOOGLE_ID = ""
-GOOGLE_SECRET = ""
+#GOOGLE_ID = ""
+#GOOGLE_SECRET = ""
