--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-#Temporary DB Using Railway Change with your db connection url
 PORT = "5000"
-DATABASE_URL = "postgresql://postgres:KVGxMrUyhnOeKfHpEBbWbNcTLpySwyoj@shinkansen.proxy.rlwy.net:49474/railway"
+
+#Provide your own Database URL and Google ID and Secret
+#DATABASE_URL = ""
 #GOOGLE_ID = ""
 #GOOGLE_SECRET = ""
