--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 alembic==1.14.1
+Authlib==1.5.0
 blinker==1.9.0
 cachelib==0.13.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.1
 Deprecated==1.2.18
-Flask==2.2.5
+Flask>=2.3,<3.0
 Flask-Limiter==3.10.1
 Flask-Migrate==4.1.0
 Flask-OAuthlib==0.9.6
@@ -25,6 +28,7 @@ oauthlib==2.1.0
 ordered-set==4.1.0
 packaging==24.2
 psycopg2==2.9.10
+pycparser==2.22
 Pygments==2.19.1
 python-dotenv==1.0.1
 requests==2.32.3
@@ -33,5 +37,5 @@ rich==13.9.4
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 urllib3==2.3.0
-Werkzeug==2.2.3
+Werkzeug>=2.0,<3.0
 wrapt==1.17.2
