--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ click==8.1.8
 colorama==0.4.6
 cryptography==44.0.1
 Deprecated==1.2.18
-Flask>=2.3,<3.0
+Flask==2.2.5
 Flask-Limiter==3.10.1
 Flask-Migrate==4.1.0
 Flask-OAuthlib==0.9.6
@@ -37,5 +37,5 @@ rich==13.9.4
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 urllib3==2.3.0
-Werkzeug>=2.0,<3.0
+Werkzeug==2.2.3
 wrapt==1.17.2
