--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ colorama==0.4.6
 cryptography==44.0.2
 Deprecated==1.2.18
 Flask==2.2.5
+Flask-JWT-Extended==4.7.1
 Flask-Limiter==3.10.1
+Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-OAuthlib==0.9.6
 Flask-SQLAlchemy==3.1.1
@@ -30,6 +32,7 @@ packaging==24.2
 psycopg2==2.9.10
 pycparser==2.22
 Pygments==2.19.1
+PyJWT==2.10.1
 python-dotenv==1.0.1
 requests==2.32.3
 requests-oauthlib==1.1.0
